# FBIManager

./: .coverage  .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  README.zh-CN.md  ai_comments.csv  export_ai_comments.py  main.py  package-lock.json  package.json  pyproject.toml  reset_pwd.py  vitest.config.js
app/: application.py  auth.py  config.py  database.py  registry.py  repositories.py  security.py  task.py
app/repos/: account.py  auth.py  chat.py  comment.py  monitor.py  post.py  video.py
app/routes/: api.py  api_chats.py  api_comments.py  api_monitors.py  api_settings.py  api_sqlbot.py  api_sync.py  api_video.py  web.py  webhook.py
app/services/: ai_reply.py  attachments.py  chat_sync.py  facebook.py  monitor.py  sqlbot.py  sync.py  webhook.py
docker/: Dockerfile  build.sh  docker-compose.yml  start.sh
docs/: code_critique_zh-CN.md
prompts/: Elio.j2  ElyaVena.j2
scripts/: deploy.sh  start.sh
static/css/: style.css
static/js/: base.js  chat_analytics.js  (+9 more)
templates/: base.html  chat_analytics.html  chat_dashboard.html  comments.html  home.html  login.html  monitors.html  personas.html  schedule.html  tasks.html
tests/: conftest.py  factories.py  test_ai_reply_service.py  test_api_more_routes.py  test_api_routes.py  test_application.py  test_auth.py  test_chat_sync_service.py  test_database.py  test_facebook_service.py  test_monitor_service.py  test_repositories.py  test_security.py  test_sqlbot_service.py  test_sync_service.py  test_task.py  test_video_analysis.py  test_web_routes.py  test_webhook_service.py
